# app-template

./: .gitignore  AGENTS.md  README.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.oauth-example.yml  docker-compose.yml  environment.yml  llm_agent_template_description.md
backend/: Dockerfile  db_migrate.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/auth/: auth_scopes.py  dependencies.py  external_accounts.py  external_oauth.py  external_providers.py  middleware.py  mongo_store.py  oauth_scopes.py  oauth_security.py  providers.py  roles.py  security.py  store.py
backend/app/cli/: README_TESTING_NOTIFICATIONS.md  migrations.py  seed_superuser.py  send_test_email.py  send_test_notification.py
backend/app/cms/: __init__.py  mongo_store.py  store.py
backend/app/core/: config.py  errors.py
backend/app/db/: base.py  factory.py  mongo.py
backend/app/media/: __init__.py  mongo_store.py  store.py
backend/app/migrations/: __init__.py  mongo_store.py  registry.py  runner.py  startup.py  store.py  types.py
backend/app/notifications/: __init__.py  email.py  invitations.py  redis_bus.py  verification.py
backend/app/profile/: catalog.py
backend/tests/: conftest.py  test_access_tokens.py  test_admin.py  test_auth.py  test_auth_config.py  test_cms.py  test_config.py  test_cors.py  test_external_accounts.py  test_health.py  test_media.py  test_migrations.py  test_notifications.py  test_oauth_provider.py  test_profile_groups.py  test_redis_bus.py  test_seed_superuser_cli.py  test_testing_auth.py
(+209 files in other folders)
