[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-system-template-backend"
version = "0.1.0"
description = "Milestone 1 FastAPI backend foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "pymongo>=4.8.0",
  "PyJWT>=2.9.0",
  "passlib[argon2]>=1.7.4",
  "email-validator>=2.2.0",
  "dkimpy>=1.1.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[project.scripts]
seed-superuser = "app.cli.seed_superuser:main"
send-test-email = "app.cli.send_test_email:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
